--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,61 +8,70 @@
     tools:context=".MainActivity"
     tools:ignore="ExtraText">
 
-    <EditText
-        android:id="@+id/Edit1"
+    <TextView
+        android:id="@+id/Text1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:text="숫자1" />
+        android:text="선택을 시작하시겠습니까?" />
 
-    <EditText
-        android:id="@+id/Edit2"
+    <CheckBox
+        android:id="@+id/ChkAgree"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:text="숫자2" />
-
-    <Button
-        android:id="@+id/BtnAdd"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:text="더하기" />
-
-    <Button
-        android:id="@+id/BtnSubtract"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:text="빼기" />
-
-    <Button
-        android:id="@+id/BtnMultiply"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:text="곱하기" />
-
-    <Button
-        android:id="@+id/BtnDivide"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:text="나누기" />
-
-    <Button
-        android:id="@+id/BtnSquare"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:text="제곱하기" />
+        android:text="시작함" />
 
     <TextView
-        android:id="@+id/TextResult"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:text="계산결과: "
-        android:textColor="#FF0000"
-        android:textSize="30dp" />
+        android:id="@+id/Text2"
+        android:text="좋아하는 애완동물은?"
+        android:visibility="invisible" />
+
+    <RadioGroup
+        android:id="@+id/Rgroup1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="invisible">
+
+        <RadioButton
+            android:id="@+id/RdoDog"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="강아지 " />
+
+        <RadioButton
+            android:id="@+id/RdoCat"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="고양이" />
+
+        <RadioButton
+            android:id="@+id/RdoHam"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="햄햄" />
+
+        <RadioButton
+            android:id="@+id/RdoBara"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="카피바라" />
+
+        <RadioButton
+            android:id="@+id/RdoRabbit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="토끼" />
+    </RadioGroup>
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/BtnOK"
+        android:text="선택완료"
+        android:visibility="invisible" />
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/ImgPet"
+        android:visibility="invisible" />
 </LinearLayout>
