--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,54 +9,39 @@
     tools:ignore="ExtraText">
 
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:baselineAligned="true">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:layout_weight="1"
+        android:orientation="vertical">
 
         <Button
             android:layout_width="wrap_content"
-            android:layout_height="50dp"
+            android:layout_height="wrap_content"
             android:text="버튼1" />
 
         <Button
             android:layout_width="wrap_content"
-            android:layout_height="100dp"
+            android:layout_height="wrap_content"
             android:text="버튼2" />
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="150dp"
-            android:text="버튼3" />
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:baselineAligned="false">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:layout_weight="1"
+        android:orientation="horizontal">
 
-        <TextView
+        <Button
             android:layout_width="wrap_content"
-            android:layout_height="50dp"
-            android:layout_marginRight="10dp"
-            android:textSize="10dp"
-            android:background="#CCC"
-            android:text="글자1" />
+            android:layout_height="wrap_content"
+            android:text="버튼1" />
 
-        <TextView
+        <Button
             android:layout_width="wrap_content"
-            android:layout_height="100dp"
-            android:layout_marginRight="10dp"
-            android:textSize="20dp"
-            android:background="#CCC"
-            android:text="글자2" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="150dp"
-            android:layout_marginRight="10dp"
-            android:textSize="30dp"
-            android:background="#CCC"
-            android:text="글자3" />
+            android:layout_height="wrap_content"
+            android:text="버튼2" />
     </LinearLayout>
 
 </LinearLayout>
