--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,34 +10,127 @@
 
     <TableRow>
 
-        <Button
-            android:layout_width="60dp"
-            android:text="1" />
+        <EditText
+            android:id="@+id/Edit1"
+            android:layout_span="5"
+            android:layout_weight="1"
+            android:hint="숫자 1 입력" />
 
-        <Button
-            android:layout_width="60dp"
-            android:layout_span="2"
-            android:text="2" />
 
-        <Button
-            android:layout_width="60dp"
-            android:text="3" />
     </TableRow>
+
+    <TableRow>
+
+        <EditText
+            android:id="@+id/Edit2"
+            android:layout_span="5"
+            android:layout_weight="1"
+            android:hint="숫자 2 입력" />
+    </TableRow>
+
     <TableRow>
 
         <Button
-            android:layout_width="60dp"
-            android:layout_column="1"
-            android:text="4" />
+            android:id="@+id/BtnNum0"
+            android:layout_weight="1"
+            android:text="0" />
 
         <Button
-            android:layout_width="60dp"
+            android:id="@+id/BtnNum1"
+            android:layout_weight="1"
+            android:text="1" />
+
+        <Button
+            android:id="@+id/BtnNum2"
+            android:layout_weight="1"
+            android:text="2" />
+
+        <Button
+            android:id="@+id/BtnNum3"
+            android:layout_weight="1"
+            android:text="3" />
+
+        <Button
+            android:id="@+id/BtnNum4"
+            android:layout_weight="1"
+            android:text="4" />
+    </TableRow>
+
+    <TableRow>
+
+        <Button
+            android:layout_weight="1"
+            android:id="@+id/BtnNum5"
             android:text="5" />
 
         <Button
-            android:layout_width="60dp"
+            android:layout_weight="1"
+            android:id="@+id/BtnNum6"
             android:text="6" />
+
+        <Button
+            android:layout_weight="1"
+            android:id="@+id/BtnNum7"
+            android:text="7" />
+
+        <Button
+            android:layout_weight="1"
+            android:id="@+id/BtnNum8"
+            android:text="8" />
+
+        <Button
+            android:layout_weight="1"
+            android:id="@+id/BtnNum9"
+            android:text="9" />
     </TableRow>
+
+    <TableRow>
+
+        <Button
+            android:id="@+id/BtnAdd"
+            android:layout_margin="5dp"
+            android:layout_span="5"
+            android:text="더하기" />
+    </TableRow>
+
+    <TableRow>
+
+        <Button
+            android:id="@+id/BtnSub"
+            android:layout_margin="5dp"
+            android:layout_span="5"
+            android:text="빼기" />
+    </TableRow>
+
+    <TableRow>
+
+        <Button
+            android:id="@+id/BtnMul"
+            android:layout_margin="5dp"
+            android:layout_span="5"
+            android:text="곱하기" />
+    </TableRow>
+
+    <TableRow>
+
+        <Button
+            android:id="@+id/BtnDiv"
+            android:layout_margin="5dp"
+            android:layout_span="5"
+            android:text="나누기" />
+    </TableRow>
+
+    <TableRow>
+
+        <TextView
+            android:id="@+id/TextResult"
+            android:layout_margin="5dp"
+            android:layout_span="5"
+            android:text="계산결과:"
+            android:textColor="#FF0000"
+            android:textSize="20dp" />
+    </TableRow>
+
 
 </TableLayout>
 
