--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,111 +4,19 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-    <LinearLayout
+    <AutoCompleteTextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
-        <Chronometer
-            android:id="@+id/chronometer1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:format="예약에 걸린 시간   %s"
-            android:gravity="center"
-            android:textSize="20dp"/>
-        <android.widget.Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/btnStart"
-            android:text="예약 시작"/>
-    </LinearLayout>
-    <RadioGroup
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <RadioButton
-            android:id="@+id/rdoCal"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="날짜 설정 (캘린더뷰)"/>
-        <RadioButton
-            android:id="@+id/rdoTime"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="시간 설정"/>
-    </RadioGroup>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dip"
-        android:layout_weight="1">
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-            <CalendarView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/calendarView1"
-                android:showWeekNumber="false"/>
-            <TimePicker
-                android:id="@+id/timePicker1"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:timePickerMode="spinner"/>
-        </FrameLayout>
-    </LinearLayout>
-    <LinearLayout
+        android:id="@+id/autoCompleteTextView1"
+        android:completionHint="선택하세요"
+        android:completionThreshold="2"
+        android:hint="자동완성 텍스트뷰">
+    </AutoCompleteTextView>
+    <MultiAutoCompleteTextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#CCCCCC">
-        <android.widget.Button
-            android:id="@+id/btnEnd"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="예약완료"/>
-        <TextView
-            android:id="@+id/tvYear"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="0000"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="년"/>
-        <TextView
-            android:id="@+id/tvMonth"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="0000"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="월"/>
-        <TextView
-            android:id="@+id/tvDay"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="0000"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="일"/>
-        <TextView
-            android:id="@+id/tvHour"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="0000"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="시"/>
-        <TextView
-            android:id="@+id/tvMinute"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="0000"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="분 예약됨"/>
-
-
-    </LinearLayout>
+        android:id="@+id/multiAutoCompleteTextView1"
+        android:completionHint="선택하세요"
+        android:completionThreshold="2"
+        android:hint="멀티자동완성 텍스트뷰"/>
 </LinearLayout>
