--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,22 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_width="match_parent"
+    android:id="@+id/baseLayout"
     android:orientation="vertical">
-    <AutoCompleteTextView
-        android:layout_width="match_parent"
+    <TextView
         android:layout_height="wrap_content"
-        android:id="@+id/autoCompleteTextView1"
-        android:completionHint="선택하세요"
-        android:completionThreshold="2"
-        android:hint="자동완성 텍스트뷰">
-    </AutoCompleteTextView>
-    <MultiAutoCompleteTextView
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
+        android:text="오른쪽 위 메뉴 버튼을 누르세요" />
+    <Button
         android:layout_height="wrap_content"
-        android:id="@+id/multiAutoCompleteTextView1"
-        android:completionHint="선택하세요"
-        android:completionThreshold="2"
-        android:hint="멀티자동완성 텍스트뷰"/>
+        android:layout_width="wrap_content"
+        android:id="@+id/button1"
+        android:layout_gravity="center"
+        android:text="버튼"/>
 </LinearLayout>
