--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/basLayout"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
-    android:id="@+id/baseLayout"
+    android:gravity="center"
     android:orientation="vertical">
-    <TextView
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:text="오른쪽 위 메뉴 버튼을 누르세요" />
-    <Button
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
+    <android.widget.Button
         android:id="@+id/button1"
-        android:layout_gravity="center"
-        android:text="버튼"/>
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="대화 상자"/>
 </LinearLayout>
