--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,14 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/basLayout"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
-    android:gravity="center"
     android:orientation="vertical">
-    <android.widget.Button
-        android:id="@+id/button1"
-        android:layout_width="wrap_content"
+    <Button
         android:layout_height="wrap_content"
-        android:text="대화 상자"/>
+        android:layout_width="match_parent"
+        android:id="@+id/btnWrite"
+        android:text="내장 메모리에 파일 쓰기" />
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/btnRead"
+        android:text="내장 메모리에서 파일 읽기" />
+
 </LinearLayout>
