--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,15 +4,23 @@
     android:layout_height="match_parent"
     android:layout_width="match_parent"
     android:orientation="vertical">
-    <Button
+    <DatePicker
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
+        android:datePickerMode="spinner"
+        android:id="@+id/datePicker1"
+        android:calendarViewShown="false" />
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/edtDiary"
+        android:background="#00ff00"
+        android:lines="8" />
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:id="@+id/btnWrite"
-        android:text="내장 메모리에 파일 쓰기" />
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/btnRead"
-        android:text="내장 메모리에서 파일 읽기" />
+        android:enabled="false"
+        android:text="Button" />
 
 </LinearLayout>
